# codex-open-client

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  RESEARCH.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
0.1/: 404.html  index.html  objects.inv
0.1/api/client/: index.html
0.1/api/errors/: index.html
0.1/api/stream-events/: index.html
0.1/api/types/: index.html
0.1/dev/internals/: index.html
0.1/getting-started/: index.html
0.1/guide/authentication/: index.html
0.1/guide/error-handling/: index.html
0.1/guide/models/: index.html
0.1/guide/responses/: index.html
0.1/guide/streaming/: index.html
0.1/guide/tool-calls/: index.html
0.1/search/: search_index.json
0.2/: 404.html  index.html  objects.inv
0.2/api/client/: index.html
0.2/api/errors/: index.html
0.2/api/stream-events/: index.html
0.2/api/types/: index.html
0.2/dev/internals/: index.html
0.2/getting-started/: index.html
0.2/guide/authentication/: index.html
0.2/guide/error-handling/: index.html
0.2/guide/models/: index.html
0.2/guide/responses/: index.html
0.2/guide/streaming/: index.html
0.2/guide/structured-output/: index.html
0.2/guide/tool-calls/: index.html
0.2/search/: search_index.json
docs/: getting-started.md  index.md
docs/api/: client.md  errors.md  stream-events.md  types.md
docs/dev/: internals.md
docs/guide/: authentication.md  error-handling.md  models.md  responses.md  streaming.md  structured-output.md  tool-calls.md
src/codex_open_client/: __init__.py  _auth.py  _client.py  _errors.py  _models.py  _responses.py  _server.py  _stream.py  _types.py
src/codex_py/: __init__.py  _api.py  _auth.py  _client.py  _config.py  _errors.py  _models.py  _pkce.py  _responses.py  _server.py  _stream.py
tests/: test_api.py  test_auth.py  test_client_live.py  test_client_unit.py  test_config.py  test_errors.py  test_interactive.py  test_live.py  test_models.py  test_pkce.py  test_responses.py  test_stream.py  test_types.py  test_version.py
