[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-py"
version = "0.1.0"
description = "Python client for OpenAI Codex — use your ChatGPT subscription for API access"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Yegor" }]
keywords = ["openai", "codex", "oauth", "pkce", "chatgpt", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that use real OAuth tokens and hit the OpenAI API (deselect with '-m \"not live\"')",
]
addopts = "-m 'not live'"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true
