[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-open-client"
dynamic = ["version"]
description = "Python client for OpenAI Codex — use your ChatGPT subscription for API access"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Yegor" }]
keywords = ["openai", "codex", "oauth", "pkce", "chatgpt", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/lunavod/codex-py"
Documentation = "https://lunavod.github.io/codex-py/"
Repository = "https://github.com/lunavod/codex-py"
Issues = "https://github.com/lunavod/codex-py/issues"
Changelog = "https://github.com/lunavod/codex-py/blob/main/CHANGELOG.md"

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that use real OAuth tokens and hit the OpenAI API (deselect with '-m \"not live\"')",
    "interactive: tests that require human interaction — run with 'pytest -m interactive -s'",
]
addopts = "-m 'not live and not interactive'"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.hatch.version]
path = "src/codex_open_client/_version.py"

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mike>=2.1.4",
    "mkdocs-material>=9.7.4",
    "mkdocstrings-python>=2.0.3",
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
